--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "author": "Maksymenko Maksym",
   "license": "ISC",
   "devDependencies": {
+    "animate.css": "^3.7.2",
     "babel-cli": "^6.26.0",
     "babel-core": "^6.26.3",
     "babel-preset-env": "^1.7.0",
