--- a/package.json
+++ b/package.json
@@ -5,36 +5,33 @@
   "description": "MMA",
   "main": "index.js",
   "scripts": {
-    "build": "babel src -d dist --presets env",
-    "watch": "babel src -d dist --presets env -w",
-    "sass": "node-sass -w src/scss/ -o src/css/ --recursive",
     "deploy": "gh-pages -d dist"
   },
   "author": "Maksymenko Maksym",
   "license": "ISC",
   "devDependencies": {
+    "@babel/core": "^7.6.4",
+    "@babel/preset-env": "^7.6.3",
+    "@babel/register": "^7.6.2",
     "animate.css": "^3.7.2",
     "babel-cli": "^6.26.0",
-    "babel-core": "^6.26.3",
     "babel-preset-env": "^1.7.0",
-    "babel-preset-es2015": "^6.24.1",
+    "browser-sync": "^2.26.7",
+    "del": "^5.1.0",
     "gh-pages": "^2.1.1",
-    "node-sass": "^4.12.0",
-    "sass": "^1.22.10",
     "gulp": "^4.0.2",
     "gulp-autoprefixer": "^7.0.1",
     "gulp-babel": "^8.0.0",
-    "gulp-concat": "^2.6.1",
-    "gulp-sass": "^4.0.2",
-    "gulp-sourcemaps": "^2.6.5",
-    "gulp-uglify": "^3.0.2",
-    "browser-sync": "^2.26.7",
-    "del": "^5.1.0",
     "gulp-cache": "^1.1.3",
+    "gulp-concat": "^2.6.1",
     "gulp-cssnano": "^2.1.3",
     "gulp-imagemin": "^6.1.1",
     "gulp-rename": "^1.4.0",
+    "gulp-sass": "^4.0.2",
+    "gulp-sourcemaps": "^2.6.5",
+    "gulp-uglify": "^3.0.2",
     "gulp-uglifyjs": "^0.6.2",
     "imagemin-pngquant": "^8.0.0"
-  }
+  },
+  "dependencies": {}
 }
